--- a/spot/CMakeLists.txt
+++ b/spot/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(${SPOT_INCLUDE_DIR})
 
 target_compile_definitions( spot PRIVATE SPOT_EXPORTS )
 
-target_link_libraries( spot flut )
+target_link_libraries( spot xo )
 
 set_target_properties(spot PROPERTIES 
 	PROJECT_LABEL "spot"
