U: Now using target_include_directories instead of include_directories (CMake)

--- a/spot/CMakeLists.txt
+++ b/spot/CMakeLists.txt
@@ -6,20 +6,18 @@ use_precompiled_headers( SPOT_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/stdafx.h" "${
 
 add_library(spot SHARED ${SPOT_SOURCES})
 
-set_property(TARGET spot PROPERTY CXX_STANDARD 17)
-set_property(TARGET spot PROPERTY CXX_STANDARD_REQUIRED ON)
+set_target_properties(spot PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
+
+target_compile_definitions( spot PRIVATE SPOT_EXPORTS )
+
+target_include_directories( spot PUBLIC ${SPOT_INCLUDE_DIR})
+
+target_link_libraries( spot xo )
 
 if (MSVC)
 	source_group("" FILES ${PRECOMPILED_HEADER_FILES})
 	source_group("spot" FILES ${SPOT_SOURCES})
 endif()
-
-include_directories(${XO_INCLUDE_DIR})
-include_directories(${SPOT_INCLUDE_DIR})
-
-target_compile_definitions( spot PRIVATE SPOT_EXPORTS )
-
-target_link_libraries( spot xo )
 
 set_target_properties(spot PROPERTIES 
 	PROJECT_LABEL "spot"
