--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,13 +4,11 @@ file (GLOB CCMA_FILES "c-cmaes/cmaes*.*" "c-cmaes/boundary_transformation.*" )
 source_group("" FILES ${TEST_FILES})
 source_group("c-cmaes" FILES ${CCMA_FILES})
 
-include_directories(${XO_INCLUDE_DIR})
-include_directories(${SPOT_INCLUDE_DIR})
-
 add_executable(spot_test ${TEST_FILES} ${CCMA_FILES})
 
-set_property(TARGET spot_test PROPERTY CXX_STANDARD 17)
-set_property(TARGET spot_test PROPERTY CXX_STANDARD_REQUIRED ON)
+set_target_properties(spot_test PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
+
+target_include_directories(spot_test PRIVATE ${XO_INCLUDE_DIR} ${SPOT_INCLUDE_DIR})
 
 target_link_libraries(spot_test spot)
 
