F: fixed spot CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,15 @@
-cmake_minimum_required(VERSION 2.8.11)
-# 2.8.11 is required for how we use Qt5.
+cmake_minimum_required(VERSION 3.12)
 
 project(spot)
 
 # To create a folder hierarchy within Visual Studio.
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-find_package(Xo REQUIRED)
-include_directories( ${FLUT_INCLUDE_DIR} )
+find_path(SPOT_INCLUDE_DIR
+    NAMES spot/optimizer.h
+    PATHS ${CMAKE_CURRENT_SOURCE_DIR}
+    )
 
-# Compiler flags.
-# ---------------
-# Must compile with C++14 with gcc/clang.
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU" OR
-   ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-    if(APPLE)
-        if(XCODE)
-            set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++14")
-            set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
-        else()
-            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-            if(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
-                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-            endif()
-        endif()
-    else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-    endif()
-endif()
-	
 # Place build products (libraries, executables) in root
 # binary (build) directory. Otherwise, they get scattered around
 # the build directory and so the dll's aren't next to the executables.
@@ -36,9 +17,14 @@ get_filename_component(CONFIG_NAME "${CMAKE_BINARY_DIR}" NAME)
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/${CONFIG_NAME}")
 set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/${CONFIG_NAME}")
 
+option(SPOT_TEST_ENABLED "Build and add spot_test" ON)
+
 # Process source code.
 add_subdirectory(spot)
-add_subdirectory(test)
 
-#enable_testing()
-#add_test(spot_test "${CMAKE_SOURCE_DIR}/bin/${CONFIG_NAME}/spottest")
+if (SPOT_TEST_ENABLED)
+    add_subdirectory(spot_test)
+    enable_testing()
+    add_test(spot_test "${CMAKE_SOURCE_DIR}/bin/${CONFIG_NAME}/spot_test")
+endif()
+
