B: Removed solution folders

--- a/spot/CMakeLists.txt
+++ b/spot/CMakeLists.txt
@@ -12,7 +12,8 @@ if (MSVC)
 	target_precompile_headers(spot PRIVATE <string> <vector> <memory> <fstream>)
 	file ( GLOB_RECURSE PRECOMPILED_HEADER_FILES ${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/cmake_pch.*)
 	source_group("CMakePCH" FILES ${PRECOMPILED_HEADER_FILES})
-	source_group("spot" FILES ${SPOT_SOURCES})
+	source_group("" FILES ${SPOT_SOURCES})
 	target_compile_definitions( spot PRIVATE SPOT_EXPORTS )
 	target_compile_options( spot PRIVATE "/MP" ) # multithreaded compilation on MSVC
+	#set_target_properties(spot PROPERTIES FOLDER "spot")
 endif()
